# moc

./: CMakeLists.txt
moc/: CMakeLists.txt
moc/core/: CMakeLists.txt
moc/core/include/: core.hpp
moc/core/src/: core.cpp
moc/scripts/: generate_helper.py  scan_models.py
src/: main.cpp
src/models/: user.entity.hpp
